[project]
name = "ps-banshee"
version = "1.2.0"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
description = "PS Banshee is a command line tool used to access Recorded Future Intelligence. PS Banshee is designed to get you working quickly with Recorded Future."
authors = [
    { name = "Ernest Bartosevic", email = "ernest.bartosevic@recordedfuture.com" }
]
maintainers = [
    { name = "Moise Medici", email = "moise.medici@recordedfuture.com" },
    { name = "Ernest Bartosevic", email = "ernest.bartosevic@recordedfuture.com" },
]
keywords = ['API', 'Recorded Future', 'Cyber Security Engineering', 'Threat Intelligence', 'command line tool', 'CLI', 'ioc enrichment']
classifiers = [
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Information Technology",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Security"
]

dependencies = [
    "typer<0.16.0",
    "pyshark==0.6",
    "polars~=1.34.0",
    "psengine~=2.6.0"
]

[build-system]
requires = [
    "setuptools>=65",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "build==1.0.3",
    "ruff~=0.11.0",
    "pytest==8.3.4",
    "pytest-vcr==1.0.2",
    "pytest-cov==6.0.0",
    "pytest-mock==3.14.0",
    "urllib3<2.3.0",
    "mimesis>=12.1.0"
]

docs = [
    "ruff~=0.11.0",
    "mike~=2.1.3",
    "mkdocs~=1.6.1",
    "mkdocs-material~=9.6.18",
    "mkdocstrings[python]>=0.18",
    "griffe-typingdoc~=0.2.8"
]

[project.scripts]
banshee = "banshee.main:app"

[project.urls]
Homepage = "https://recordedfuture-professionalservices.github.io/ps-banshee/latest/"
Changelog = "https://recordedfuture-professionalservices.github.io/ps-banshee/latest/CHANGELOG/"
Source = "https://github.com/recordedfuture-professionalservices/ps-banshee"

[tool.setuptools]
packages = [
    "banshee",
]

[tool.setuptools.package-data]
"*" = [
    "**/*",
]

[tool.setuptools.exclude-package-data]
"*" = [
    "**/*.pyc",
]

